[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.21",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]
